# LabySolver

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: windows-msvc.yml
apps/: windows_worker_probe.cpp
docs/: ARCHITECTURE.md  ASYNC_WORKER_SCHEDULER.md  BEAM_SEARCH.md  BUILD_AND_TEST.md  COORDINATOR_RECOVERY.md  DISTRIBUTED_ARCHITECTURE.md  INSTRUMENTATION.md  LEVEL_FORMAT_AND_CATALOG.md  OVERVIEW.md  PRUNING_HEURISTICS.md  SIMULATION.md  STATUS.md  WINDOWS_CUDA_CLIENT_PLAN.md
sketch/: BeamSearch.hpp  BoardState.hpp  Chain.hpp  CoordinatorCheckpoint.hpp  Dispatcher.hpp  GameRules.hpp  Inbox.hpp  JobState.hpp  LevelCatalog.hpp  Makefile  Master.hpp  NodePool.hpp  PruningHeuristics.hpp  ReferenceSolver.hpp  RemoteTransport.hpp  RemoteWorkerHost.hpp  SearchInstrumentation.hpp  SeedCodec.hpp  SeedQueue.hpp  Worker.hpp  main_sketch.cpp
sketch/sim/: benchmark_scheduler.sh  feasibility_sim.cpp
sketch/tests/: test_beam_search.cpp  test_board_state.cpp  test_chain.cpp  test_coordinator_checkpoint.cpp  test_dispatcher_fairness.cpp  test_dispatcher_pipeline.cpp  test_end_to_end_sim.cpp  test_game_rules.cpp  test_inbox.cpp  test_level_catalog.cpp  test_master_recovery.cpp  test_nodepool.cpp  test_pruning_reduce_positions.cpp  test_pruning_undo_move.cpp  test_reference_levels.cpp  test_remote_end_to_end.cpp  test_remote_transport.cpp  test_search_instrumentation.cpp  test_seedqueue.cpp  test_util.hpp  test_worker_async.cpp  test_worker_cancellation.cpp
