cmake_minimum_required(VERSION 3.22)
project(LabySolver LANGUAGES CXX)
find_package(Threads REQUIRED)

option(LABY_BUILD_TESTS "Build portable CPU tests" ON)
option(LABY_ENABLE_CUDA "Probe CUDA from the Windows worker client" OFF)

add_library(laby_headers INTERFACE)
target_include_directories(laby_headers INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/sketch)
target_compile_features(laby_headers INTERFACE cxx_std_17)
target_link_libraries(laby_headers INTERFACE Threads::Threads)
if(MSVC)
  target_compile_options(laby_headers INTERFACE /W4 /permissive-)
else()
  target_compile_options(laby_headers INTERFACE -Wall -Wextra)
endif()

add_executable(laby_worker_probe apps/windows_worker_probe.cpp)
target_link_libraries(laby_worker_probe PRIVATE laby_headers)
if(WIN32)
  target_link_libraries(laby_worker_probe PRIVATE ws2_32)
endif()

if(LABY_ENABLE_CUDA)
  find_package(CUDAToolkit REQUIRED)
  target_compile_definitions(laby_worker_probe PRIVATE LABY_WITH_CUDA=1)
  target_link_libraries(laby_worker_probe PRIVATE CUDA::cudart)
endif()

if(LABY_BUILD_TESTS)
  include(CTest)
  foreach(test_name IN ITEMS board_state game_rules level_catalog reference_levels coordinator_checkpoint master_recovery)
    add_executable(test_${test_name} sketch/tests/test_${test_name}.cpp)
    target_link_libraries(test_${test_name} PRIVATE laby_headers)
    add_test(NAME ${test_name} COMMAND test_${test_name})
  endforeach()
endif()
